--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Combat Log
+author=JeppeKjeldsen
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=A log of a combat encounter to help review each action taken
+tags=bossing,pvm,combat
+plugins=com.CombatLog.CombatLogPlugin
